--- a/contacto.html
+++ b/contacto.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlogDeCafé</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
     <header class="header">
@@ -40,28 +43,15 @@
         <form class="formulario">
             <div class="campo">
                 <label class="campo__label" for="nombre">Nombre</label>
-                <input 
-                    class="campo__field"
-                    type="text" 
-                    placeholder="Tu Nombre" 
-                    id="nombre"
-                >
+                <input class="campo__field" type="text" placeholder="Tu Nombre" id="nombre">
             </div>
             <div class="campo">
                 <label class="campo__label" for="email">E-mail</label>
-                <input 
-                    class="campo__field"
-                    type="email" 
-                    placeholder="Tu E-mail" 
-                    id="email"
-                >
+                <input class="campo__field" type="email" placeholder="Tu E-mail" id="email">
             </div>
             <div class="campo">
                 <label class="campo__label" for="mensaje">Mensaje</label>
-                <textarea 
-                    class="campo__field campo__field--textarea"
-                    id="mensaje"
-                ></textarea>
+                <textarea class="campo__field campo__field--textarea" id="mensaje"></textarea>
             </div>
 
             <div class="campo">
@@ -69,7 +59,7 @@
             </div>
         </form>
 
-        
+
     </main>
 
     <footer class="footer">
@@ -88,5 +78,7 @@
         </div>
     </footer>
     <script src="js/modernizr.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
+
 </html>
